kubernetes/vote/azure-vote-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: azure-vote-back
  namespace: vote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azure-vote-back
    spec:
      containers:
      - name: azure-vote-back
        image: yoichikawasaki/azure-vote-back:v1
        args: ["--ignore-db-dir=lost+found"]
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: azure-vote-front
  namespace: vote
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      containers:
      - name: azure-vote-front
        image: yoichikawasaki/azure-vote-front:v1
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
        imagePullPolicy: Always
