kubernetes/vote/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
  namespace: vote
spec:
  ports:
  - port: 3306
  selector:
    app: azure-vote-back
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
  namespace: vote
spec:
  ports:
  - port: 80
  selector:
    app: azure-vote-front
