kubernetes/vote/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: azure-vote
  namespace: vote
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: vote.<CLUSTER_SPECIFIC_DNS_ZONE>
    http:
      paths:
      - backend:
          serviceName: azure-vote-front
          servicePort: 80
        path: /
